@@ -34,6 +34,7 @@
 	* Support for suspended items in sendqueues
 	* Fixed an API glitch in TnyFolderChange
 	* Empty folder bugfix
+	* Added a guard to tny_mime_part_set_filename for NULL situations
 
 2007-07-05  Philip Van Hoof  <pvanhoof@gnome.org>
 
